--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
+# Ignore arc binary
+/arc
+/cmd/arc/arc
+/cmd/compressor/compressor
+/test/arc
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -11,11 +17,12 @@
 # Test binary, built with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Output of the go coverage tool
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Dependency directories
+/vendor/
+/Godeps/
 
 # Go workspace file
 go.work
@@ -23,3 +30,18 @@ go.work.sum
 
 # env file
 .env
+
+# OS specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
